--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.6"
     },
     "dependencies": {
+        "babel-runtime": "^6.26.0",
         "vue-pdf": "^4.0.7"
     }
 }
