--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:6H60ASxEIE9KpLeqx9+KUp7Zi1mP4K4RkwxvhwHax+Y=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://go-juan-gomez.herokuapp.com/
 
 LOG_CHANNEL=stack
 
