cambios 1.0 para subir a produccion

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:6H60ASxEIE9KpLeqx9+KUp7Zi1mP4K4RkwxvhwHax+Y=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=https://go-juan-gomez.herokuapp.com/
 
 LOG_CHANNEL=stack
