--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:6H60ASxEIE9KpLeqx9+KUp7Zi1mP4K4RkwxvhwHax+Y=
 APP_DEBUG=false
-APP_URL=https://go-juan-gomez.herokuapp.com/
+APP_URL=https://juan-gomez.herokuapp.com/
 
 LOG_CHANNEL=stack
 
