--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,15 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+DirectoryIndex index.php
+<IfModule mod_rewrite.c>
+
+    RewriteEngine On
+    RewriteBase /test/
+
+    RewriteRule ^$ public/index.php [L]
+
+    RewriteRule ^((?!public/).*)$ public/$1 [L,NC]
+
+</IfModule>
